added a more relevant intro, and a discussion of why bother to use the collect function when working with databases.

--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -2,7 +2,7 @@
 
 ## Overview 
 
-Learn to read in spreadsheet-like data of various formats from your local device and from the web. Once read in, these data sets will be used to walk through a real world Data Science application that includes wrangling the data into a useable format and creating an effective data visualization.
+Learn to read in spreadsheet-like data of various formats from your local device and from the web. Reading data into R is the gateway to any data analysis. If you can't get it in, you can't analyze it. Additionally, there are many ways to read data into R and if you spend more time upfront matching the data reading method to the type of data you have, you will have to spend less time re-formatting, cleaning and wrangling your data (this is the second step to all data analyses). It's like making sure your shoes are tied well before going for a run so that you don't trip on the laces!
 
 ## Chapter learning objectives
 By the end of the chapter, students will be able to:
@@ -237,9 +237,11 @@ republican_data <- collect(republican_db)
 republican_data
 ```
 
+Why bother to use the `collect` function you might ask? The data looks pretty similar in both outputs shown above. Well in many cases you can directly feed the database reference (what `tbl` gives you) into downstream analysis functions (e.g., `ggplot2` for data visualization and `lm` for linear regression modeling), however, this does not work in every case (e.g., `nrow` to count rows in a data frame and `tail` to preview the last 6 rows of a data frame). Additionally, some forms of subsetting will not work to extract columns or single values. Thus, once you have finished your data wrangling of the `tbl` database reference object it is advisable to then bring it into memory in R using `collect` so it works as a data frame is expected to. 
+
 ## Writing data from R to a `.csv` file
 
-At the middle and end of a data analysis, we often want to write the data frame that we have changed (either through filtering and subsetting or summarizing) to a file so that we can share it with others, or use it for another step in our analysis. The most straightforward way to do this is to use the `tidyverse`'s `write_csv` function. The default arguments for this file are to include column names and use a comma (`,`) as the delimiter. Below we demonstrate creating a new version of the US state-level property, income, population and voting data from 2015 and 2016 that does not contain the territory of Puerto Rico, and then writing this to a `.csv` file:
+At the middle and end of a data analysis, we often want to write the data frame that we have changed (either through filtering, subsetting, mutating or summarizing) to a file so that we can share it with others, or use it for another step in our analysis. The most straightforward way to do this is to use the `tidyverse`'s `write_csv` function. The default arguments for this file are to include column names and use a comma (`,`) as the delimiter. Below we demonstrate creating a new version of the US state-level property, income, population and voting data from 2015 and 2016 that does not contain the territory of Puerto Rico, and then writing this to a `.csv` file:
 
 ```{r}
 state_data <- filter(us_data, state != "PR")
