tc edits to chapter 2 after tt main edit pass

--- a/index.Rmd
+++ b/index.Rmd
@@ -67,13 +67,13 @@ Source: [What is the question?](https://science.sciencemag.org/content/347/6228/
 
 By the end of the chapter, students will be able to:
 
-* use a Jupyter notebook to execute provided R code
-* edit code and markdown cells in a Jupyter notebook
-* create new code and markdown cells in a Jupyter notebook
-* load the `tidyverse` library into R
-* create new variables and objects in R using the assignment symbol
-* use the help and documentation tools in R
-* match the names of the following functions from the `tidyverse` library to their documentation descriptions: 
+- use a Jupyter notebook to execute provided R code
+- edit code and markdown cells in a Jupyter notebook
+- create new code and markdown cells in a Jupyter notebook
+- load the `tidyverse` library into R
+- create new variables and objects in R using the assignment symbol
+- use the help and documentation tools in R
+- match the names of the following functions from the `tidyverse` library to their documentation descriptions: 
     - `read_csv` 
     - `select`
     - `mutate`
