--- a/01-reading.Rmd
+++ b/01-reading.Rmd
@@ -2,61 +2,90 @@
 
 ## Overview 
 
-Learn to read in spreadsheet-like data of various formats into R from your local device and from the web. Reading data into R is the gateway to any data analysis. If you can't get it in, you can't analyze it. Additionally, there are many ways to read data into R and if you spend more time upfront matching the data reading method to the type of data you have, you will have to spend less time re-formatting, cleaning and wrangling your data (this is the second step to all data analyses). It's like making sure your shoes are tied well before going for a run so that you don't trip on the laces!
+In this chapter, you'll learn to read spreadsheet-like data of various formats into R from your local device and from the web. 
+"Reading" (or "loading") is the process of converting data (stored as plain text, a database, HTML, etc.) into an object (e.g., a dataframe)
+that R can easily access and manipulate, and is thus the gateway to any data analysis; you won't be able to analyze 
+data unless you've loaded it first. And because there are many ways to store data, there are similarly many ways to read data into R. 
+If you spend more time upfront matching the  data reading method to the type of data you have, 
+you will have to spend less time re-formatting, cleaning and wrangling your data (the second step to all data analyses). 
+It's like making sure your shoelaces are tied well before going for a run so that you don't trip later on!
 
 ## Chapter learning objectives
 By the end of the chapter, students will be able to:
 
-* define the following:
+- define the following:
     - absolute file path
     - relative file path
     - url
-* read data into R using a relative path and a url
-* compare and contrast the following functions:
+- read data into R using a relative path and a url
+- compare and contrast the following functions:
     - `read_csv` 
     - `read_tsv`
     - `read_csv2`
     - `read_delim`
     - `read_excel`
-* match the following `tidyverse` `read_*` function arguments to their descriptions:
+- match the following `tidyverse` `read_*` function arguments to their descriptions:
     - `file` 
     - `delim`
     - `col_names`
     - `skip`
-* choose the appropriate `tidyverse` `read_*` function and function arguments to load a given plain text tabular data set into R
-* use `readxl` library's `read_excel` function and arguments to load a sheet from an excel file into R
-* connect to a database using the `DBI` library's `dbConnect` function
-* list the tables in a database using the `RSQLite` library's `dbListTables` function
-* create a reference to a database table that is queriable using the `tbl` from the `dbplyr` library
-* retrieve data from a database query and bring it into R using the `collect` function from the `dbplyr` library
+- choose the appropriate `tidyverse` `read_*` function and function arguments to load a given plain text tabular data set into R
+- use `readxl` library's `read_excel` function and arguments to load a sheet from an excel file into R
+- connect to a database using the `DBI` library's `dbConnect` function
+- list the tables in a database using the `DBI` library's `dbListTables` function
+- create a reference to a database table that is queriable using the `tbl` from the `dbplyr` library
+- retrieve data from a database query and bring it into R using the `collect` function from the `dbplyr` library
 
-* *optional*: scrape data from the web
-  * read/scrape data from an internet URL using the rvest `html_nodes` and `html_text` functions
-  * compare downloading tabular data from a plain text file (e.g. *.csv) from the web versus scraping data from a .html file
+- (*optional*) scrape data from the web
+    - read/scrape data from an internet URL using the rvest `html_nodes` and `html_text` functions
+    - compare downloading tabular data from a plain text file (e.g. `.csv`) from the web versus scraping data from a `.html` file
 
 ## Absolute and relative file paths
 
-When you load virtually any data set into R you need to tell R where that files lives. The file could live on your computer, or somewhere on the internet. In this section we will discuss the case where the file lives on your computer.
+When you load a data set into R, you first need to tell R where that files lives. The file could live on your 
+computer (*local*), or somewhere on the internet (*remote*). In this section we will discuss the case where the file lives on your computer.
 
-The place the file lives on your computer is called the "path". You can think of the path as directions to the file. There are two kinds of paths, relative paths and absolute paths. A relative path is where the file is in respect to where you currently are on the computer (e.g., where the Jupyter notebook file you are working in is). Whereas an absolute path is where the file is in respect to the base or root folder of the computer's filesystem.
+The place where the file lives on your computer is called the "path". You can think of the path as directions to the file. There are two kinds of 
+paths: relative paths and absolute paths. A relative path is where the file is in respect to where you currently are on the computer (e.g., where the 
+Jupyter notebook file that you're working in is). On the other hand, an absolute path is where the file is in respect to the base (or root) folder of 
+the computer's filesystem.
 
-If our computer's filesystem looked like the picture below, and we were working in the Jupyter notebook titled `worksheetk_02.ipynb` and we wanted to read in the `.csv` file named `happiness_report.csv` into our Jupyter notebook using R, we could do this using either a relative or an absolute path. We show what both would be below.
+Suppose our computer's filesystem looks like the picture below, and we are working in the Jupyter notebook titled `worksheetk_02.ipynb`. If we want to 
+read in the `.csv` file named `happiness_report.csv` into our Jupyter notebook using R, we could do this using either a relative or an absolute path. 
+We show what both choices below.
 
 <img src="img/file-system-for-export-to-intro-datascience.svg" width="840">
 
-##### Reading `happiness_report.csv` using a relative path:
+**Reading `happiness_report.csv` using a relative path:**
 
 ```
 happiness_data <- read_csv("data/happiness_report.csv")
 ```
 
-##### Reading `happiness_report.csv` using an absolute path:
+**Reading `happiness_report.csv` using an absolute path:**
 
 ```
 happiness_data <- read_csv("/home/jupyter/dsci-100/worksheet_02/data/happiness_report.csv")
 ```
 
-So which one should you use? Well to ensure your code can be run on a different computer, you should choose to use the relative path (and it's also less typing!). Why would the absolute path not work on a different computer? The reason for this is that the names and the folder structure of the path between a computer's root folder (named `/`) and any files and folders you are usually working with will be different depending on who owns the computer (usually there is a different user name on each computer) and where the files and folders happen to be located on that particular computer. 
+So which one should you use? Generally speaking, to ensure your code can be run on a different computer, you should use relative paths (and it's also less typing!). 
+This is because the absolute path of a file (the names of folders between the computer's root `/` and the file) isn't usually the same across multiple computers. 
+For example, suppose Alice and Bob are working on a project together
+on the `happiness_report.csv` data. Alice's file is stored at 
+
+`/home/alice/project/data/happiness_report.csv`, 
+
+while Bob's is stored at 
+
+`/home/bob/project/data/happiness_report.csv`.
+ 
+Even though Alice and Bob stored their files in the same place on their computers (in their home folders), the absolute paths are different due to their different usernames.
+If Bob has code that loads the `happiness_report.csv` data using an absolute path, the code won't work on Alice's computer.
+But the relative path from inside the `project` folder (`data/happiness_report.csv`) is the same on both computers; any code that uses relative paths will work on both!
+
+<!--Why would the absolute path not work on a different computer? The reason for this is that the names and the folder structure of the path between a computer's root 
+folder (named `/`) and any files and folders you are usually working with will be different depending on who owns the computer (usually there is a different user name 
+on each computer) and where the files and folders happen to be located on that particular computer. -->
 
 See this video for another explanation: 
 
@@ -66,9 +95,15 @@ See this video for another explanation:
 
 ## Reading tabular data from a plain text file into R
 
-Now we will learn more about reading tabular data from a plain text file  into R, as well as how to write tabular data to a file. Last chapter we learned about using the `tidyverse` `read_csv` function when reading files that match that functions expected defaults (column names are present and commas, `,`, are used as the delimiter/separator between columns). In this section, we will learn how to read files do not satisfy the default expectations of `read_csv`. 
+Now we will learn more about reading tabular data from a plain text file  into R, as well as how to write tabular data to a file. 
+Last chapter we learned about using the `tidyverse` `read_csv` function when reading files that match that functions expected defaults 
+(column names are present and commas are used as the delimiter/separator between columns). In this section, we will learn how to read 
+files do not satisfy the default expectations of `read_csv`. 
 
-Before we jump into the cases where the `tidyverse` `read_csv` functions expected defaults are not the case, let's revisit how we use this with one that does and thus the only argument we need to give to the function is the path to the file, here `data/state_property_vote.csv`. We put `data/` before the name of the file when we are loading the data set because this data set is located in a sub-folder, named `data`, relative to where we are running our R code.
+Before we jump into the cases where the data aren't in the expected default format for `tidyverse` and `read_csv`, let's revisit the simpler
+case where the defaults hold and the only argument we need to give to the function is the path to the file, `data/state_property_vote.csv`. 
+We put `data/` before the name of the file when we are loading the dataset because this dataset is located in a sub-folder, named `data`, 
+relative to where we are running our R code.
 
 Here is what the file would look in plain text editor:
 
@@ -76,7 +111,7 @@ Here is what the file would look in plain text editor:
 head -n 10 data/state_property_vote.csv
 ```
 
-And here is a review of how we can use `read_csv` to load in R:
+And here is a review of how we can use `read_csv` to load it into R:
 
 ```{r load data, warning=FALSE, message=FALSE}
 library(tidyverse)
@@ -108,7 +143,7 @@ us_data
 
 ### `read_delim` as a more flexible method to get tabular data into R
 
-When our tabular data comes in a different format, we can use the `read_delim function()` instead. For example, a different version of this same dataset has no column names and uses tabs as the delimiter instead of commas. 
+When our tabular data comes in a different format, we can use the `read_delim` function instead. For example, a different version of this same dataset has no column names and uses tabs as the delimiter instead of commas. 
 
 Here is how the file would look in plain text editor:
 
@@ -136,14 +171,22 @@ us_data
 
 ### Previewing a data file before reading it into R
 
-In all the examples above, we gave you previews of the data file before we read it into R. This is essential so you can see whether or not there are column names, what the delimiters are, and if there are lines you need to skip. You should do this yourself when trying to read in data files. In Jupyter, you can do this by using the Jupyter home menu to navigate to the file and clicking on it to preview it as a plain text file. We demonstrate this in the video below:
+In all the examples above, we gave you previews of the data file before we read it into R. This is essential so that you can see whether or not there are column names, what the 
+delimiters are, and if there are lines you need to skip. You should do this yourself when trying to read in data files. In Jupyter, you preview data as a plain text file by clicking
+on the file's name in the Jupyter home menu. We demonstrate this in the video below:
 
 <iframe width="840" height="473" src="https://www.youtube.com/embed/6orO4YMAyeQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 
 ## Reading data from an Microsoft Excel file
 
-One of the most widely used spreadsheet software is Microsoft Excel, thus it is very likely that one day you will need to load data into R from an Excel spreadsheet. To be able to do this, a key thing to know is that even though a `.csv` file loaded in Excel looks almost identical to a `.xlsx` (file extension for a typical Excel file) file in Excel, these are two very different file types in reality. Given this, you need to use different tools to load these types of files into R. `.csv` files are plain text files, meaning that the characters you see when you open the file in a plain text editor are the same that you would see in Microsoft excel. This is not the case for `.xlsx` files. Below we show what a `.xlsx` file would look like in a plain text editor: 
+There are many other ways to store tabular datasets beyond plain text files, and similarly many ways to load those datasets into R. For example, it is very common to encounter,
+and need to load into R, data stored as a Microsoft Excel spreadsheet (with the filename extension `.xlsx`). 
+To be able to do this, a key thing to know is that even though `.csv` and `.xlsx` files look almost 
+identical when loaded into Excel, the data themselves are stored completely differently.
+While `.csv` files are plain text files, where the characters you see when you open the file in a text editor are exactly the data they represent,
+this is not the case for `.xlsx` files. Take a look at what a `.xlsx` file would look like in a text editor: 
+
 
 ```
 ,?'O
@@ -178,9 +221,9 @@ t                                                       8f??3wn
 5`??<͘??6uA	?
 ```
 
-This type file representation allows Excel files to store additional things that you cannot store in a `.csv` file, such as fonts, text formatting, graphics, multiple sheets and more. 
-
-Can we read Excel files into R if they look like that in a plain text editor? The answer is yes, but to do this easily we need to use an R package developed specifically for this purpose, called the `readxl` package. 
+This type of file representation allows Excel files to store additional things that you cannot store in a `.csv` file, such as fonts, text formatting, graphics, multiple sheets 
+and more. And despite looking odd in a plain text editor, we can read Excel spreadsheets into R using the `readxl` package developed 
+specifically for this purpose.
 
 ```{r}
 library(readxl)
@@ -188,19 +231,24 @@ us_data <- read_excel("data/state_property_vote.xlsx")
 us_data
 ```
 
-If the `.xlsx` file has multiple sheets, then you have to use the `sheet` argument to specify either the sheet number or name. You can also specify cell ranges using the `range` argument. This is useful in cases where the sheet contains multiple tables (a sad thing that happens to many Excel spreadsheets).
+If the `.xlsx` file has multiple sheets, then you have to use the `sheet` argument to specify either the sheet number or name. You can also specify cell ranges using the `range` argument. This is useful in cases where a single sheet contains multiple tables (a sad thing that happens to many Excel spreadsheets).
 
 As with plain text files, you should always try to explore the data file before importing it into R. This helps you decide which arguments you need to use to successfully load the data into R. If you do not have the Excel program on your computer, there are other free programs you can use to preview the file. Examples include Google Sheets and Libre Office. 
 
 ## Reading data from a database
 
-Another very common form of data that is read into R for the purpose of data analysis is data stored in a relational database. Common database software you might encounter include SQLite, MySQL, PosgreSQL, Oracle, and many more. All of these employ the SQL query language to pull data from the database. Thankfully several R packages have been written that allow R to connect to relational databases and use the R programming language as the front end (what the user types in) to pull data from them so that you do not have to learn the SQL query language for standard data extraction cases. In this book we will give examples of how to do this using R and the SQLite and PosgreSQL databases.
+Another very common form of data storage to be read into R for the purpose of data analysis is the relational database. Common database software you might encounter include 
+SQLite, MySQL, PosgreSQL, Oracle, and many more. All of these employ SQL (*structured query language*) to pull data from the database. Thankfully, you don't need to know SQL
+to analyze data from a database; 
+several packages have been written 
+that allow R to connect to relational databases and use the R programming language as the front end (what the user types in) to pull data from them. In this book we will 
+give examples of how to do this using R with SQLite and PostgreSQL databases.
 
 ### Reading data from a SQLite database
 
 SQLite is probably the simplest relational database that one can use in combination with R. SQLite databases are self-contained and usually stored and accessed locally on one computer. Data is usually stored in a file with a `.db` extension. Similar to Excel files, these are not plain text files and cannot be read in a plain text editor. 
 
-The first thing you need to do to read data into R from a database is to connect to the database. We do that using the `dbConnect` function from the `DBI` R package. This does not read in the data, but simply tells R where the database is.
+The first thing you need to do to read data into R from a database is to connect to the database. We do that using the `dbConnect` function from the `DBI` (database interface) package. This does not read in the data, but simply tells R where the database is and opens up a communication channel.
 
 ```{r}
 library(DBI)
@@ -222,7 +270,10 @@ state_db <- tbl(con_state_data, "state")
 state_db
 ```
 
-Although it looks like we just got a data frame from the database, we didn't! It is a reference, it is showing us data that is still in the SQLite database (note the first two lines of the output). It does this because often times databases are more efficient selecting, filtering and joiining large datasets than R is. And in some cases, the database will not even be on your laptop, but on a more powerful machine. So R is lazy and waits to bring this data into R's memory until you explicitly tell it to do so using the `dbplyr` `collect` function.
+Although it looks like we just got a data frame from the database, we didn't! It's a *reference*, showing us data that is still in the SQLite database (note the first two lines of the output). 
+It does this because databases are often more efficient at selecting, filtering and joining large datasets than R. And typically, the database will not even be 
+stored on your computer, but rather a more powerful machine somewhere on the web. So R is lazy and waits to bring this data into memory until you explicitly tell 
+it to do so using the `collect` function from the `dbplyr` library.
 
 Here we will filter for only states that voted for the Republican candidate in the 2016 Presidential election, and then use `collect` to finally bring this data into R as a data frame. 
 
@@ -236,22 +287,44 @@ republican_data <- collect(republican_db)
 republican_data
 ```
 
-Why bother to use the `collect` function you might ask? The data looks pretty similar in both outputs shown above. Well in many cases you can directly feed the database reference (what `tbl` gives you) into downstream analysis functions (e.g., `ggplot2` for data visualization and `lm` for linear regression modeling), however, this does not work in every case (e.g., `nrow` to count rows in a data frame and `tail` to preview the last 6 rows of a data frame). Additionally, some forms of subsetting will not work to extract columns or single values from the refernce given by the `tbl` function. Thus, once you have finished your data wrangling of the `tbl` database reference object it is advisable to then bring it into memory in R using `collect` so it works as a data frame is expected to. 
+Why bother to use the `collect` function? The data looks pretty similar in both outputs shown above. And `dbplyr` provides lots of functions similar to `filter` that 
+you can use to directly feed the database reference (what `tbl` gives you) into downstream analysis functions (e.g., `ggplot2` for data visualization and `lm` for 
+linear regression modeling). However, this does not 
+work in *every* case; look what happens when we try to use `nrow` to count rows in a data frame:
+
+```{r}
+nrow(republican_db)
+```
+ 
+or `tail` to preview the last 6 rows of a data frame:
+
+```
+tail(republican_db)
+```
+```
+## Error: tail() is not supported by sql sources
+```
+
+Additionally, some operations will 
+not work to extract columns or single values from the reference given by the `tbl` function. Thus, once you have finished your data wrangling of the `tbl` database 
+reference object, it is advisable to then bring it into your local machine's memory using `collect` as a data frame.
 
 ### Reading data from a PostgreSQL database 
 
-PostgeSQL (also called Postgres) is a very popular free and open-source option for relational database software. Unlike SQLite, PostgeSQL uses a client–server database engine. This is because it was designed to be used and accessed on a network, and this means that you have to provide more information to R when connecting to this kind of database software. The additional information that you need to include when you call the `dbconnect` function when connecting to a PostgeSQL database is listed below:
+PostgreSQL (also called Postgres) is a very popular free and open-source option for relational database software. Unlike SQLite, PostgreSQL uses 
+a client–server database engine, as it was designed to be used and accessed on a network. This means that you have to provide more 
+information to R when connecting to Postgres databases. The additional information that you need to include when you call the `dbConnect` 
+function is listed below:
 
 - `dbname` - the name of the database (a single PostgreSQL instance can host more than one database)
-- `host` - the url pointing to where the database is located
-- `port` - the communication endpoint between R and the PostgeSQL database (this is typically always 5432 for PostgreSQL)
+- `host` - the URL pointing to where the database is located
+- `port` - the communication endpoint between R and the PostgreSQL database (this is typically always 5432 for PostgreSQL)
 - `user` - the username for accessing the database
 - `password` - the password for accessing the database
 
 
-Additionally, we use the `RPostgres::Postgres` instead of `RSQLite::SQLite()` because we are now connecting to a PostgreSQL database.
-
-Below we demonstrate how to connect to a version of the `can_mov_db` database, which contains information about Canadian movies (*note - this is a fictitional database*).
+Additionally, we must use the `RPostgres` library instead of `RSQLite` in the `dbConnect` function call.
+Below we demonstrate how to connect to a version of the `can_mov_db` database, which contains information about Canadian movies (*note - this is a synthetic, or artificial, database*).
 
 ```
 library(RPostgres)
@@ -260,7 +333,8 @@ can_mov_db_con <- dbConnect(RPostgres::Postgres(), dbname = "can_mov_db",
                         user = "user0001", password = '################')
 ```
 
-After opening the connection, we can again use `dbListTables` to find out what tables are in the `can_mov_db` database:
+After opening the connection, everything looks and behaves almost identically to when we were using an SQLite database in R. For example, we can again 
+use `dbListTables` to find out what tables are in the `can_mov_db` database:
 
 ```
 dbListTables(can_mov_db_con)
@@ -271,7 +345,7 @@ dbListTables(can_mov_db_con)
  [6] "episodes"          "names"      "names_occupations" "occupation"       "ratings" 
 ```
 
-We see that there are 10 tables in this database. Let's first look at the `"ratings"` table and then find out what the lowest rating that exists in the `can_mov_db` database:
+We see that there are 10 tables in this database. Let's first look at the `"ratings"` table to find the lowest rating that exists in the `can_mov_db` database:
 
 ```
 ratings_db <- tbl(can_mov_db_con, "ratings")
@@ -296,7 +370,7 @@ ratings_db
 # … with more rows
 ```
 
-To find the lowest rating that exists in the data base, we first need to subset the `average_rating` column using `select`:
+To find the lowest rating that exists in the data base, we first need to extract the `average_rating` column using `select`:
 
 ```
 avg_rating_db <- select(ratings_db, average_rating)
@@ -331,7 +405,7 @@ min(avg_rating_db)
 Error in min(avg_rating_db) : invalid 'type' (list) of argument
 ```
 
-Instead of the minimum, we get an error! This is an example of when we need to use the `collect` function to bring the data into R so we can do further computation on it:
+Instead of the minimum, we get an error! This is another example of when we need to use the `collect` function to bring the data into R for further computation:
 
 ```
 avg_rating_data <- collect(avg_rating_db)
@@ -346,7 +420,10 @@ We see the lowest rating given to a movie is 1, indicating that it must have bee
 
 ## Writing data from R to a `.csv` file
 
-At the middle and end of a data analysis, we often want to write the data frame that we have changed (either through filtering, subsetting, mutating or summarizing) to a file so that we can share it with others, or use it for another step in our analysis. The most straightforward way to do this is to use the `tidyverse`'s `write_csv` function. The default arguments for this file are to include column names and use a comma (`,`) as the delimiter. Below we demonstrate creating a new version of the US state-level property, income, population and voting data from 2015 and 2016 that does not contain the territory of Puerto Rico, and then writing this to a `.csv` file:
+At the middle and end of a data analysis, we often want to write a data frame that has changed (either through filtering, selecting, mutating or summarizing) to a file 
+so that we can share it with others or use it for another step in the analysis. The most straightforward way to do this is to use the `write_csv` function from the `tidyverse` library. 
+The default arguments for this file are to use a comma (`,`) as the delimiter and include column names. Below we demonstrate creating a new version of the US state-level 
+property, income, population and voting data from 2015 and 2016 that does not contain the territory of Puerto Rico, and then writing this to a `.csv` file:
 
 ```{r}
 state_data <- filter(us_data, state != "PR")
