main viz new structure done; working on viz output format section

--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -1,34 +1,48 @@
 # Effective data visualization {#viz}
 
 ## Overview 
-Expand your data visualization knowledge and tool set beyond what we have seen and practiced so far. We will move beyond scatter plots and learn other effective ways to visualize data, as well as some general rules of thumb to follow when creating visualizations. All visualization tasks this week will be applied to real world data sets.
+This chapter will introduce concepts and tools relating to data visualization beyond what we have seen and practiced so far.
+We will focus on guiding principles for effective data visualization and explaining visualizations independent of any particular tool or programming language.
+In the process, we will cover some specifics of creating visualizations (scatter plots, bar charts, line graphs, and histograms) for data using R.
 
 ## Chapter learning objectives
+
+**REVISIT THESE WHEN DONE CHAPTER**
+
 * Define the three key aspects of ggplot objects:
      - aesthetic mappings
      - geometric objects
      - scales
 * Use the `ggplot2` function in R to create the following visualizations:
-    - 2-D scatter plot
-    - 2-D scatter plot with a third variable that stratifies the groups
-    - count bar chart for multiple groups
-    - proportion bar chart for multiple groups
-    - stacked bar chart for multiple groups
+    - 2-D scatter plot with/without a third variable that stratifies groups
+    - 2-D line graphs with/without a third variable that stratifies groups
+    - various bar charts (count, proportion, stacked) for multiple groups
+* Given a dataset and a description of a claim, select from the above plot types to create a visualization that justifies the claim 
+* Given a visualization and a description of a claim, evaluate its effectiveness and suggest ways to improve the visualization to better support the claim
 * List the rules of thumb for effective visualizations 
-* Given a visualization and a sentence describing it's intended task, evaluate it's effectiveness and suggest ways to improve the visualization with respect to that intended task
 
-## `ggplot2` for data visualization in R
+## Making effective visualizations
 
-(or alternate title, "how" to use R and `ggplot2` to make plots)
+Just being able to make vizualizations in R with `ggplot2` (or any other tool for that matter) doesn't mean that your vizualization is effective at communicating 
+to others what you are trying to communicate. There is a large body of research behind what makes effective visualizations and it seems it is really dependent on what 
+humans can see and process. Claus Wilke, a Professor of Integrative Biology at The University of Texas at Austin, has written down some (digestible) guiding principles for 
+making effectice visualizations based on this literature in his new book, [Fundamentals of Data Visualization](https://serialmentor.com/dataviz/). Below we give a high level 
+listing of these, but we strongly recommend you read and/or refer [Part II: Principles of figure design](https://serialmentor.com/dataviz/proportional-ink.html) when creating 
+your visualizations in this class (or any other time you are doing this task!).
 
-The creator of `ggplot2`, [Hadley Wickham](http://hadley.nz/), has written a wonderful chapter on how to use this library to create visualizations in R, so we suggest you read that for this week's pre-reading: [Data visualisation chapter](https://r4ds.had.co.nz/data-visualisation.html) from [R for Data Science](https://r4ds.had.co.nz/) by Garrett Grolemund & Hadley Wickham
+There are two external references that contain a wealth of additional information on the topic of data visualization:
+see the [Fundamentals of Data Visualization](https://serialmentor.com/dataviz/) by  Professor Claus Wilke for more details on general principles of effective visualizations,
+and see Grolemund & Wickham's [R for Data Science](https://r4ds.had.co.nz/) chapter on [creating visualizations using `ggplot2`](https://r4ds.had.co.nz/data-visualisation.html)
+for a deeper introduction into the syntax and grammar of plotting with `ggplot2` specifically.
 
-## Making effective vizualizations
 
-Just being able to make vizualizations in R with `ggplot2` (or any other tool for that matter) doesn't mean that your vizualization is effective at communicating to others what you are trying to communicate. There is a large body of research behind what makes effective visualizations and it seems it is really dependent on what humans can see and process. Claus Wilke, a Professor of Integrative Biology at The University of Texas at Austin, has written down some (digestible) guiding principles for making effectice visualizations based on this literature in his new book, [Fundamentals of Data Visualization](https://serialmentor.com/dataviz/). Below we give a high level listing of these, but we strongly recommend you read and/or refer [Part II: Principles of figure design](https://serialmentor.com/dataviz/proportional-ink.html) when creating your visualizations in this class (or any other time you are doing this task!).
+### Choosing the visualization
+#### *Tell a story, make a claim, and justify it* {-#my-section}
 
-### Some guiding principles for making effectice visualizations
+### Designing the visualization
+#### *Maximize the signal-to-noise ratio* {-#my-section}
 
+make it readable
 1. Only make the plot area (where the dots, lines, bars are) as big as needed (simple plots can, and should be quite small)
 2. Don't adjust the axes to zoom in on small differences (if the difference is small, show that its small!)
 3. Show the data (don't hide the shape/distribution of the data behind a bar)
@@ -38,3 +52,38 @@ Just being able to make vizualizations in R with `ggplot2` (or any other tool fo
 7. Ensure the text on your visualization is big enough to be easily read
 8. Do not use pie charts (its harder for us to compare the sizes of the slices of a pie, than it is to compare sizes of bars).
 9. Do not use 3D (we don't see in 3D, not even as we're walking around in space)
+
+avoid tables
+
+use good colour palette
+
+### Explaining the visualization
+#### *Tell the story* {-#my-section}
+
+### Saving the visualization
+#### *Pay attention to output format* {-#my-section}
+
+Just as there are many ways to store datasets, there are many ways to store visualizations and images.
+Which one you choose can depend on a number of factors, such as file size/type limitations 
+(e.g., if you are submitting your visualization as part of a conference paper or to a poster printing shop)
+and where it will be displayed (e.g., online, in a paper, on a billboard, in talk slides).
+Generally speaking, images come in two flavours: *bitmap* (or *raster*) formats and *vector* (or *scalable graphics*) formats.
+
+
+- **Bitmap / Raster**: image is represented as a 2-D grid of square pixels, each with their own colour.
+    - raster images are often *compressed* before storing so they take up less space
+        - *lossy:* the image cannot be perfectly recreated when loaded again, as some of the data is lost (hopefully not noticeable though!)
+        - *lossless:* the image can be perfectly recreated when loaded
+    - *common file types:* 
+        - JPEG (`.jpg` or `.jpeg`): a lossy type, usually used for photographs 
+        - PNG (`.png`): a lossless type, usually used for plots / line drawings
+    - *software:* Adobe Photoshop, GIMP, Microsoft Paint, etc
+    - *advantages:* Looks the same on all devices, takes the same time to load regardless of image complexity
+    - *disadvantages:*
+- **Vector / Scalable Graphics**: image is represented as a collection of mathematical objects (lines, planes, shapes, curves).
+    - uses math
+    - can be small/fast if simple, big/slow if complex
+    - difference in look on different devices
+    - *software:* Adobe Illustrator, Inkscape, etc
+
+
