viz file format rough draft done (no imgs yet)

--- a/03-viz.Rmd
+++ b/03-viz.Rmd
@@ -70,20 +70,16 @@ and where it will be displayed (e.g., online, in a paper, on a billboard, in tal
 Generally speaking, images come in two flavours: *bitmap* (or *raster*) formats and *vector* (or *scalable graphics*) formats.
 
 
-- **Bitmap / Raster**: image is represented as a 2-D grid of square pixels, each with their own colour.
-    - raster images are often *compressed* before storing so they take up less space
-        - *lossy:* the image cannot be perfectly recreated when loaded again, as some of the data is lost (hopefully not noticeable though!)
-        - *lossless:* the image can be perfectly recreated when loaded
+- **Bitmap / Raster**: image is represented as a 2-D grid of square pixels, each with their own colour. Raster images are often *compressed* before storing so they take up less space. A compressed format is *lossy* if the image cannot be perfectly recreated when loading and displaying, with the hope that the change is not noticeable. *Lossless* formats, on the other hand, allow a perfect display of the original image.
     - *common file types:* 
         - JPEG (`.jpg` or `.jpeg`): a lossy type, usually used for photographs 
         - PNG (`.png`): a lossless type, usually used for plots / line drawings
     - *software:* Adobe Photoshop, GIMP, Microsoft Paint, etc
-    - *advantages:* Looks the same on all devices, takes the same time to load regardless of image complexity
-    - *disadvantages:*
-- **Vector / Scalable Graphics**: image is represented as a collection of mathematical objects (lines, planes, shapes, curves).
-    - uses math
-    - can be small/fast if simple, big/slow if complex
-    - difference in look on different devices
+- **Vector / Scalable Graphics**: image is represented as a collection of mathematical objects (lines, planes, shapes, curves). When the computer displays the image, it redraws all of the elements using their mathematical formulas.
+    - *common file types:* PDF (`.pdf`) and SVG (`.svg`), both for general purpose use
     - *software:* Adobe Illustrator, Inkscape, etc
 
-
+Raster and vector images have opposing advantages and disadvantages. A raster image of a fixed width / height takes the same amount of space and time to load regardless of 
+what the image shows (caveat: the compression algorithms may be better / faster for certain images). A vector image takes space and time to load 
+corresponding to how complex the image is, since the computer has to draw all the elements each time it is displayed. On the other hand, you can zoom into / scale up 
+vector graphics as much as you like without the image looking bad, while raster images eventually start to look "pixellated." 
